2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim-glob-1.0.tcl, jim-readdir.c: Add readdir extension and glob package for glob command

2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim-regexp.c: Add regexp extension for regexp and regsub commands

2008-11-04 Uwe Klein <uklein@klein-messgeraete.de>
 
     * jim-hwio.c: file added
     * provides memory area and hardware access on linux i386

2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim.c: add support for proc default arguments to jim
	* jim.c: fix lazy expression evaluation with unary not

2008-11-04 Steve Bennett <steveb@workware.net.au>

	* jim.c: fix problems with "puts [list ${a}]". Resulted in syntax
	error.
	* jim.c: :: scoping for set
	* jim.c: Creating a C command when a Tcl command of the same name
	already exists can cause a crash.
	 

2008-11-03 Steve Bennett <steveb@workware.net.au>

	* jim.c: Allow env with no arguments to retrieve all environment variables
	as a list of name value ...
	* jim.c: Add format support for %o -- octal
	* jim.c: Allow direct access to variables in the global scope by
	prefixing with ::
	* jim.c: For compatibility with older versions of Tcl, allow == and != to
	compare strings if the arguments can't be interpreted as numbers
	* jim.c: Ensure that the string representation exists before doing
	string toupper or tolower
	 
2008-08-31 Duane Ellis

	* jim.c, jim.h: more text formatting fixes, improved error messages
	with location of error
	 
2008-08-25 Duane Ellis 

	* jim.c, jim.h: name value pair and formatting fixes
	
2008-07-23 Uwe Klein <uklein@klein-messgeraete.de>

	* fix missing vararg.h in some files ( included in jim.h )
	* in aio.socket return an error when hosti resolution fails
	   instead of just carrying on.

2008-07-23 oharboe

	* jim.c: reduce stack usage. Important for embedded devices without
	MMU.	
	* jim.c, jim-aio.c, jim-eventloop.c, jim-eventloop.h: emergency repairs